plugins {
	id 'java-library'
}

group = 'ovh.angrysoft'
version = '0.3.7'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.11.0'
	implementation "org.eclipse.paho:org.eclipse.paho.mqttv5.client:1.2.5"
	implementation "org.jmdns:jmdns:3.5.12"
	testImplementation "org.junit.jupiter:junit-jupiter-api:5.11.1"
	testImplementation "org.junit.jupiter:junit-jupiter-engine:5.11.1"
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
    manifest {
        attributes "Main-Class": "ovh.angrysoft.homedaemon.App"
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
